[ADD] Examples of css module composition and variables

--- a/source/names/names.scss
+++ b/source/names/names.scss
@@ -1,3 +1,7 @@
+@import '../shared/styles/variables';
+
 .header {
-  color: red;
+  composes: header from '../shared/styles/typography';
+  composes: uppercase from '../shared/styles/typography';
+  color: $pumpkin;
 }
