--- a/source/css/_global.styl
+++ b/source/css/_global.styl
@@ -1,2 +1,14 @@
 body
   font 16px/24px sans-serif
+
+.main__container
+  display flex
+
+main
+  width 80%
+
+aside
+  width 20%
+  background #f7f7f7
+  height 100vh
+  padding 40px
