more sidebar styling

--- a/source/css/_global.styl
+++ b/source/css/_global.styl
@@ -2,13 +2,9 @@ body
   font 16px/24px sans-serif
 
 .main__container
+  position relative
   display flex
 
 main
-  width 80%
+  width 65%
 
-aside
-  width 20%
-  background #f7f7f7
-  height 100vh
-  padding 40px
