--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -62,6 +62,26 @@ aside
   h3
     font-weight 600
     padding 10px 0
+    cursor pointer
+    position relative
+    &:after
+      display inline-block
+      position absolute
+      right 10px
+      color #bababa
+  &.closed
+    h3:after
+      content '\276f'
+      transform rotate(90deg)
+    table
+      display none
+  &.open
+    h3:after
+      content '\276f'
+      transform rotate(-90deg)
+      right 8px
+    table
+      display table
 
 .heading__small
   @extend .small-heading
