hide and show sidebar

--- a/source/css/_global.styl
+++ b/source/css/_global.styl
@@ -7,4 +7,12 @@ body
 
 main
   width 65%
+  transition width 250ms
+  &.full-width
+    width 100%
 
+.hidden
+  display none
+
+.shown__ib
+  display inline-block
