search bar width modification WIP

--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -9,6 +9,8 @@ nav
   justify-content space-between
   width 60%
   align-items center
+  &.full-width
+    width 100%
 
 .links__right a, span
   margin-left $nav-margin
