sidebar and map fixes WIP

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -17,6 +17,11 @@ aside
   &:first-child
     background #ededed
     color black
+    height 20vh
+    min-height 200px
+  &:last-child
+    overflow-y auto
+    height 80vh
   h1
     font-size 32px
     margin 25px 0 15px
