search icon and search box animation

--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -4,9 +4,10 @@
   padding 15px $nav-margin
   align-items center
   position absolute
-  top 10px
+  top -2px
   right 10px
   z-index 3
+  width 700px
 
 .links__left
   display flex
