add help nav to bottom

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,8 +1,10 @@
 $border = #dedede
+$border-md = #C7CACB
 
 $brand-dark-md = #615E5F
 $brand-dark = #322F30
 
 $text-light = #848585
+$text-light-2 = #A1A2A2
 
 $nav-margin = 40px
