styling for custom label

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -2,5 +2,13 @@
   width 100%
   height 100%
 
-.my-div-icon
-  color black
+.leaflet-marker-icon
+  position relative
+
+.leaflet-marker-icon__label
+  width 150px
+  text-align center
+  display table
+  margin 0 auto
+  left -75px
+  position absolute
