initial implementation of dyanmic label sizes based on zoom

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -16,6 +16,8 @@ $hover-fill-opacity = 0.9
   margin 0 auto
   left -75px
   position absolute
+  color #fff
+  font-weight bold
 
 .mapsvg
   stroke-opacity $stroke-opacity
