minor styling fixes

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -10,14 +10,17 @@ $hover-fill-opacity = 0.9
   position relative
 
 .leaflet-marker-icon__label
-  width 150px
+  width 200px
   text-align center
   display table
   margin 0 auto
-  left -75px
+  left -100px
   position absolute
   color #fff
   font-weight bold
+  text-transform uppercase
+  letter-spacing 3px
+  -webkit-font-smoothing antialiased
 
 .mapsvg
   stroke-opacity $stroke-opacity
