--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -2,13 +2,23 @@
   position fixed
   bottom 15px
   left 15px
+  font-family 'acumin-pro-condensed', sans-serif
   div
     font-weight bold
-    font-size 50px
+    font-size 70px
     margin-bottom 15px
+    position relative
+    bottom 10px
   small
     display block
     text-transform uppercase
     letter-spacing 1px
-    color #bababa
+    color #666
     font-size 11px
+    font-family 'acumin-pro', Helvetica, sans-serif
+
+
+.total-count__plus-minus
+  font-size 78%
+  position relative
+  bottom 5px
