--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -1,3 +1,8 @@
+body
+  font-size 16px
+  line-height 24px
+  font-family 'acumin-pro', Helvetica, sans-serif
+
 .small-heading
   text-transform uppercase
   letter-spacing 1px
@@ -7,3 +12,4 @@
   font-weight bold
   border-bottom 1px solid
   padding-bottom 2
+
