start to pull geojson from actual API, fix styling accordingly

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -1,6 +1,6 @@
 $stroke-opacity = 0
-$fill-opacity = 0.7
-$hover-fill-opacity = 0.9
+$fill-opacity = 0.79
+$hover-fill-opacity = 0.95
 
 .leaflet-container
   width 100%
@@ -41,10 +41,10 @@ path
     fill #60d085
     @extend .mapsvg
   &.west-africa
-    stroke #6fd4f2
-    fill #6fd4f2
+    stroke #9DDC52
+    fill #9DDC52
     @extend .mapsvg
   &.southern-africa
-    stroke #75e7d0.7
-    fill #75e7d0.7
+    stroke #75e7d0
+    fill #75e7d0
     @extend .mapsvg
