add Noe Display webfont

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -26,10 +26,6 @@ aside
   &:last-child
     overflow-y auto
     height 80vh
-  h1
-    font-size 40px
-    margin 55px 0 20px
-    font-weight 600
 
 .sidebar__year-nav__container
   position relative
@@ -88,9 +84,12 @@ aside
     @extend .small-current
 
 .sidebar__entity-name
-  font-family "lemonde-journal", Georgia, serif
+  font-family 'Noe Display', Georgia, serif
   font-weight 700
   font-style normal
+  font-size 36px
+  margin 55px 0 20px
+  -webkit-font-smoothing auto
 
 .sidebar__stats-table
   width 100%
