--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -1,3 +1,8 @@
+@font-face
+  font-family 'Noe Display'
+  src url('../fonts/noe_display_bold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/noe_display_bold.woff') format('woff')
+
 body
   font-size 16px
   line-height 24px
