sidebar region styling

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -84,7 +84,7 @@ aside
   text-decoration none
   &:hover
     text-decoration underline
-  &.current
+  &.active
     @extend .small-current
 
 .sidebar__entity-name
