sidebar continental rollup

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -105,10 +105,14 @@ aside
     td:last-child
       text-align right
   tbody td
-    padding 3px 0
+    padding 6px 0
     &:last-child
       font-weight bold
       text-align right
+
+.sidebar__stats-table.bold-all
+  tbody td:first-child
+    font-weight bold
 
 .count-type-toggle
   position absolute
