--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -18,3 +18,8 @@ body
   border-bottom 1px solid
   padding-bottom 2
 
+.indented
+  text-indent 1em
+
+.font-normal
+  font-weight normal !important
