complete data display on 'Summary Totals & Area' tab

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -98,6 +98,8 @@ aside
 .sidebar__stats-table
   width 100%
   margin-bottom 30px
+  h3
+    @extend .small-heading
   thead
     @extend .small-heading
     color $text-light
@@ -106,6 +108,8 @@ aside
       text-align right
   tbody td
     padding 6px 0
+    span
+      color $text-light
     &:last-child
       font-weight bold
       text-align right
