only fire fetch once in sidebar, cleanup styling

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -82,9 +82,8 @@ aside
   display table
   color #fff
   text-decoration none
-  &:hover
-    text-decoration underline
-  &.active
+  padding-bottom 3px
+  &.active, &:hover
     @extend .small-current
 
 .sidebar__entity-name
