--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -16,7 +16,7 @@ body
 .small-current
   font-weight 700
   border-bottom 1px solid
-  padding-bottom 2
+  padding-bottom 2px
 
 .indented
   text-indent 1em
