DPPS Sidebar WIP

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -135,6 +135,8 @@ aside
       border-radius 4px 0 0 4px
     &:last-of-type a
       border-radius 0 4px 4px 0
+    &.active
+      cursor text
     &.active a
       background #1E1B1C
       border-top 1px solid #3F3C3D
