--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -169,6 +169,7 @@ aside
       position absolute
       right 10px
       color $text-light
+      top 40%
   &.closed
     h3:after
       content '\276f'
