begin to decouple sidebar from concept of regions WIP

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -1,10 +1,10 @@
-.regional-totals
+.subgeography-totals
   tr
     border-bottom 1px solid #dcdcdc
     border-top 1px solid #dcdcdc
     border-collapse collapse
 
-.regional-totals__region-name
+.subgeography-totals__subgeography-name
   font-weight 700
   padding 10px 0
   span
@@ -12,7 +12,7 @@
     font-weight 400
     font-size 88%
 
-.regional-totals__estimate
+.subgeography-totals__estimate
   font-weight 700
   width 10%
   text-align right
