make year link dynamic in sidebar nav

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -48,12 +48,16 @@ aside
   font-size 14px
   display table
   position absolute
+  li a
+    text-decoration none
+    color #fff
   li:not(.current)
     display none
   &:hover
     li
       cursor pointer
       display block
+      color #fff
       &:hover
         font-weight bold
 
