--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -1,11 +1,13 @@
 .search__container
   width 100%
+  position relative
   max-width 800px
   margin-left $nav-margin
   height 40px
 
 .search__input
   border 1.5px solid $border
+  display block
   width 100%
   height 40px
   background white
@@ -18,6 +20,7 @@
   &.blurred
     border-radius 50%
     width 40px
+    color transparent
     transition width ease 300ms, border-radius 100ms ease 150ms
 
 .search__input input
@@ -31,8 +34,8 @@
   width 14px
   height 14px
   display inline-block
-  right 7.25%
-  top 25px
+  right 10px
+  top 10px
   cursor text
   &:after
     content ''
@@ -48,3 +51,23 @@
   text-transform uppercase
   letter-spacing 1px
   font-size 10px
+
+.search__results
+  width 100%
+  position absolute
+  right 0
+  top 40px
+
+.search__result-item
+  padding 0 15px
+  background white
+  height 40px
+  line-height 40px
+  border 1.5px solid $border
+  border-top none
+  font-size 11px
+  transition 300ms ease background
+  cursor pointer
+
+  &:hover
+    background #f7f4f4
