--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -2,21 +2,27 @@
   width 100%
   max-width 800px
   margin-left $nav-margin
+  height 40px
 
 .search__input
   border 1.5px solid $border
   width 100%
-  padding 12px 15px
+  height 40px
+  background white
   box-shadow inset 0 0 2px #ddd
   float right
   &.focused
-    width 100%
+    width 350px
     border-radius 4px
     transition width ease 300ms, border-radius 50ms ease 50ms
   &.blurred
     border-radius 50%
-    width 7%
+    width 40px
     transition width ease 300ms, border-radius 100ms ease 150ms
+
+.search__input input
+  padding 12px 15px
+  border none
 
 .icon__magnifying-glass
   position absolute
@@ -42,4 +48,3 @@
   text-transform uppercase
   letter-spacing 1px
   font-size 10px
-
