--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -13,9 +13,10 @@
   background white
   box-shadow inset 0 0 2px #ddd
   float right
+  padding 0
   &.focused
-    width 350px
-    border-radius 4px
+    width 100%
+    border-radius 0
     transition width ease 300ms, border-radius 50ms ease 50ms
   &.blurred
     border-radius 50%
@@ -26,6 +27,9 @@
 .search__input input
   padding 12px 15px
   border none
+  display block
+  width 100%
+  border-radius 0
 
 .icon__magnifying-glass
   position absolute
