use slugs instead of ids in map geojson href

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -42,7 +42,7 @@ h1.region-4
 
 path
   transition fill-opacity 200ms ease-in-out, stroke-width 200ms ease-in-out
-  &.northern-africa
+  &.north-africa
     stroke-opacity 0
     fill-opacity 0
   &.eastern-africa
