styles for country svg paths

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -69,3 +69,24 @@ path
     @extend .mapsvg
     &:hover
       stroke darken($southern, 20%)
+
+.region-west-africa-country
+  stroke #BFE78B
+  fill #BFE78B
+  stroke-opacity 1
+  fill-opacity 0.1
+  stroke-width 1.5
+
+.region-central-africa-country
+  stroke #70CD8A
+  fill #70CD8A
+  stroke-opacity 1
+  fill-opacity 0.1
+  stroke-width 1.5
+
+.region-southern-africa-country
+  stroke #69DCC6
+  fill #69DCC6
+  stroke-opacity 1
+  fill-opacity 0.1
+  stroke-width 1.5
