--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -8,3 +8,8 @@ $text-light = #848585
 $text-light-2 = #A1A2A2
 
 $nav-margin = 40px
+
+$southern-africa = #81D9C2
+$eastern-africa = #1EC5EE
+$west-africa = #9ACC23
+$central-africa = #70BF69
