Sidebar now expands to full-width (new actions, store structure, and component props/methods)

--- a/source/css/_global.styl
+++ b/source/css/_global.styl
@@ -6,8 +6,10 @@ main
   width 65%
   transition width 250ms
   position relative
-  &.full-width
+  &.main--full
     width 100%
+  &.main--closed
+    width 0
 
 .hidden
   display none
