--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -7,12 +7,15 @@ aside
   transition width 250ms
   position relative
   z-index 2
-  &.open
-    width 35%
-    display block
   &.closed
     width 0%
     display none
+  &.open
+    width 35%
+    display block
+  &.full
+    width: 100%
+    display block
 
 .sidebar__inner
   padding 20px 40px
