Add styles to expand drawer to full-screen by default on mobile

--- a/source/css/_global.styl
+++ b/source/css/_global.styl
@@ -8,6 +8,9 @@ main
   position relative
   &.main--full
     width 100%
+  &.main--half
+    @media (max-width $mobile-max)
+      width 0
   &.main--closed
     width 0
 
