--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -13,6 +13,10 @@ aside
   &.open
     width 35%
     display block
+
+    @media (max-width $mobile-max)
+      width 100%
+
   &.full
     width: 100%
     display block
