First pass at new markup for expanded sidebar

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -1,5 +1,5 @@
 .subgeography-totals
-  tr
+  tbody tr
     border-bottom 1px solid #dcdcdc
     border-top 1px solid #dcdcdc
     border-collapse collapse
