Improved full-width sidebar styling for subGeographies

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -1,8 +1,11 @@
 .subgeography-totals
   tbody tr
-    border-bottom 1px solid #dcdcdc
     border-top 1px solid #dcdcdc
     border-collapse collapse
+  thead tr
+    border-top 0
+  th:not(:first-child), td:not(:first-child)
+    text-align right
 
 .subgeography-totals__subgeography-name
   font-weight 700
@@ -16,3 +19,8 @@
   font-weight 700
   width 10%
   text-align right
+
+.subgeography-totals__totals
+  font-weight bold
+  border-bottom 0 !important
+  border-top 1px solid black !important
