When geography is naviagated to, show a viz type and don't load between

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -93,7 +93,7 @@ aside table
   margin-left 0
   padding-left 0
 
-.sidebar__viz-type li a
+.sidebar__viz-toggle
   @extend .small-heading
   line-height 1
   margin-bottom 10px
@@ -101,6 +101,7 @@ aside table
   color #fff
   text-decoration none
   padding-bottom 3px
+  cursor pointer
   &.active, &:hover
     @extend .small-current
 
