--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -9,9 +9,10 @@ $text-light-2 = #A1A2A2
 
 $nav-margin = 40px
 
-$southern-africa = #81D9C2
-$eastern-africa = #1EC5EE
-$west-africa = #9ACC23
-$central-africa = #70BF69
+
+$west-africa = #7163f0
+$eastern-africa = #ed7071
+$central-africa = #256ee4
+$southern-africa = #63cbc0
 
 $mobile-max = 800px
