Add narrative fetching to normal geography API flow

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -204,6 +204,9 @@ aside table
     table
       display table
 
+.sidebar__narrative
+  margin-bottom 30px
+
 .heading__small
   @extend .small-heading
 
