Add first pass at loader

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -110,6 +110,7 @@ aside table
   font-weight 700
   font-style normal
   font-size 36px
+  line-height 36px
   margin 55px 0 20px
   -webkit-font-smoothing auto
 
@@ -227,6 +228,12 @@ aside table
 
   &.open div
     height auto
+
+.sidebar__loader
+  .sidebar__inner
+    height 100%
+    text-align center
+    width 100%
 
 .heading__small
   @extend .small-heading
