Improved sidebar loading state styles

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -234,6 +234,12 @@ aside table
     height 100%
     text-align center
     width 100%
+  h1
+    left 50%
+    margin 0
+    position absolute
+    top 50%
+    transform translate(-50%, -50%)
 
 .heading__small
   @extend .small-heading
