Wired Up Search with new Autocomplete Endpoint

--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -60,8 +60,12 @@
   position absolute
   right 0
   top 40px
+  max-height 410px
+  overflow-y auto
 
 .search__result-item
+  display block
+  text-decoration none
   padding 0 15px
   background white
   height 40px
