--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -1,8 +1,19 @@
+@import 'typography'
+
 .search__container
   width 100%
   position relative
   max-width 800px
   height 40px
+
+.search__overlay
+  background rgba($brand-dark, .7);
+  position fixed
+  top 0
+  left 0
+  width 100%
+  height 100%
+  z-index 1
 
 .search__input
   border 1.5px solid $border
@@ -13,9 +24,10 @@
   box-shadow inset 0 0 2px #ddd
   float right
   padding 0
+
   &.focused
     width 100%
-    border-radius 0
+    border-radius 3px
     transition width ease 300ms, border-radius 50ms ease 50ms
   &.blurred
     border-radius 50%
@@ -28,7 +40,11 @@
   border none
   display block
   width 100%
-  border-radius 0
+  border-radius 3px
+
+  &:focus,
+  &:active
+    outline 0
 
 .icon__magnifying-glass
   position absolute
@@ -53,28 +69,32 @@
 ::-webkit-input-placeholder
   text-transform uppercase
   letter-spacing 1px
-  font-size 10px
+  font-size 12px
 
 .search__results
   width 100%
   position absolute
   right 0
-  top 40px
+  top 37.5px
   max-height 410px
   overflow-y auto
+  border-top 1.5px solid $border
 
 .search__result-item
   display block
   text-decoration none
-  padding 0 15px
+  padding 15px
   background white
-  height 40px
-  line-height 40px
   border 1.5px solid $border
   border-top none
-  font-size 11px
+  font-size 16px
   transition 300ms ease background
   cursor pointer
+  color $brand-dark
 
   &:hover
     background #f7f4f4
+
+.search__result__parent-label
+  @extend .small-heading
+  color $text-light
