--- a/source/css/modules/ranges.styl
+++ b/source/css/modules/ranges.styl
@@ -1,7 +1,23 @@
-.known_geojson
+.range_geojson
   z-index 100
   stroke #333
   fill #333
-  stroke-opacity 0
-  fill-opacity 0.1
   stroke-width 0
+  stroke-opacity 0
+
+
+.known_geojson
+  @extend .range_geojson
+  fill-opacity 0.1
+
+.possible_geojson
+  @extend .range_geojson
+  fill-opacity 0.07
+
+.protected_geojson
+  @extend .range_geojson
+  fill-opacity 0.04
+
+.doubtful_geojson
+  @extend .range_geojson
+  fill-opacity 0.025
