--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -6,6 +6,10 @@ $hover-fill-opacity = 0.85
   width 100%
   height 100%
 
+.leaflet-control-container
+  position relative
+  z-index 1
+
 .leaflet-marker-icon
   position relative
 
