Fix positioning of ranges legend when breadcrumbs are active

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -10,6 +10,9 @@ $hover-fill-opacity = 0.85
   position relative
   z-index 1
 
+.main__container.breadcrumbs-active .leaflet-control-container
+  top 56px
+
 .leaflet-marker-icon
   position relative
 
