--- a/source/css/modules/ranges.styl
+++ b/source/css/modules/ranges.styl
@@ -80,6 +80,8 @@ $box = #bababa
       left 205px
       bottom 0
 
+.main__container.breadcrumbs-active .ranges__container
+  top 70px
 
 .ranges_dropdown
   padding 5px
